# QAFI-App

./: .env.example  .gitignore  README.md  dev.sh  pyproject.toml  requirements.txt
backend/: main.py
backend/langchain_tools/: alphamissense_tool.py  clinvar_tool.py  gnomad_tool.py  pubmed_tool.py  qafi_tool.py  uniprot_tool.py
backend/rag/: acmg_knowledge.py
backend/routers/: agent.py  agent_old_manual.py  analysis.py  langchain_agent.py  predict.py
backend/services/: clinvar.py  gnomad.py  literature.py  predictors.py  qafi.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  i18n.tsx
frontend/src/api/: client.ts
frontend/src/components/: EvidenceTabs.tsx  Layout.tsx
frontend/src/pages/: Agent.tsx  Dashboard.tsx  Interpret.tsx  Landing.tsx  Predict.tsx
