[project]
name = "qafi-app"
version = "0.1.0"
description = "QAFI — Clinical web application for protein variant prediction and interpretation"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "anthropic>=0.42.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",  # for testing FastAPI
]
